syntax = "proto3";

package order;

option go_package = "./pkg/order/pb";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
    int64 parcelId =1;
    string size = 2;
    int64 userId = 3;
}

message CreateOrderResponse {
    int64 status = 1;
    string error = 2;
    int64 id =3;
}